--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,7 +13,11 @@
     "eslint": "^8.56.0",
     "eslint-config-google": "^0.14.0",
     "parcel": "^2.7.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "rollup": "^2.79.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "dependencies": {
     "firebase": "^10.7.1",
